# smu-is614-iot-step-tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  athena.properties  deploy_lambda.sh  pyproject.toml  requirements.txt
archive/: generate_synthetic_data.ipynb  train_test_split.ipynb
archive/v2/: microbit_receiver.py  receive_csv_to_s3.py
data/: 230213_1452_clarence_test.csv  sample_data.csv
docs/src/: config.py
docs/src/aws-iot/: publish.py
misc/: base.mplstyle
mlflow/mlruns/784673017186658412/: meta.yaml
notebooks/: 0_setup_env_aws.ipynb  1_exploratory_analysis.ipynb  2_activity_comparison.ipynb  3_time_series_filters.ipynb  4_step_counting_feature_importance.ipynb  exploratory_analysis.ipynb  generate_synthetic_data.ipynb  model_class_testing.ipynb  plotting_config_example.ipynb  preprocessing.ipynb  processing.ipynb  train_test_split.ipynb  working_with_aws.ipynb
scratch/spencer/: dweet-receive.py  dweet-send.py  gateway.py  lab3.ipynb  lab3.py  mqytt-publisher.py  mqytt-subscriber.py  mqytt.py
src/: config.py  dataloader.py  feature_generator.py  helpers.py  inference.py  model.py  trainer.py
src/aws-iot/: publish.py
src/aws-iot/certificates/: certificate.pem.crt  private.pem.key  public.pem.key
src/aws-iot/connect_device_package/: microbit-Policy  microbit.cert.pem  (+3 more)
src/aws-serverless/: handler.py  serverless.yml
src/microbit-data-collection/: microbit_transmitter.py  readme.txt
src/sagemaker/: deploy.py  model.sav  server.py  sklearn-and-deploy.ipynb  sklearn-and-deploy.py  sklearn.py
tableau/: IoT.twb
(+12 files in other folders)
